--- a/Exploratory data analysis/Regression_techniques.ipynb
+++ b/Exploratory data analysis/Regression_techniques.ipynb
@@ -5,7 +5,7 @@
    "id": "5e0b58b1-7036-46d7-8684-d3649955765d",
    "metadata": {},
    "source": [
-    "# In this notebook we explore the some multivariate analysis techniques"
+    "# In this notebook we explore the some regression techniques"
    ]
   },
   {
